about.html and .css : fix spacing

--- a/apps/public/static/css/about.css
+++ b/apps/public/static/css/about.css
@@ -51,10 +51,11 @@ color: #989898;
 
 /*Main container*/
 .main{
-	height:100vh;
+	/*height:100vh;*/
 	width:100%;
 	margin-top: 30px;
-	padding: 0;
+	padding-bottom: 16%;
+	/*padding: 0;*/
 	background-image: url('/static/images/about.jpg');
 	background-attachment: fixed;
 	background-size: cover;
@@ -69,4 +70,8 @@ color: #989898;
 
 .main h5 {
 	color: #ffffff;
+}
+
+.last-h5 {
+	padding-bottom: 16%;
 }
